task for first tab and handel different screen

--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -6,6 +6,7 @@
     <ListView
         android:id="@+id/conatct_list"
         android:layout_width="match_parent"
+        android:padding="10dp"
         android:layout_height="match_parent">
     </ListView>
 
