--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -9,19 +9,19 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:layout_weight="2">
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/first"
             android:layout_width="wrap_content"
-            android:layout_weight=".5"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
             android:text="first"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight=".5"
+            android:textSize="20dp"
+            android:layout_marginLeft="10dp"
             android:id="@+id/last"
             android:text="last"/>
 
