--- a/app/src/main/res/layout/activity_contact_info.xml
+++ b/app/src/main/res/layout/activity_contact_info.xml
@@ -32,19 +32,11 @@
             android:id="@+id/first"
             android:layout_width="match_parent"
             android:padding="10dp"
-            android:text="first"
+            android:text="name"
             android:gravity="center"
             android:layout_height="wrap_content"
             android:textSize="35px"/>
 
-        <TextView
-            android:id="@+id/last"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:gravity="center"
-            android:text="last"
-            android:textSize="35px"/>
         <TextView
             android:id="@+id/contact"
             android:text="Contact"
