--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -30,14 +30,27 @@
         android:orientation="vertical"
         android:gravity="center">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_layout"
+            style="@style/AppTheme.Text.TextInputLayout"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginBottom="15dp"
-            android:id="@+id/otp"
-            android:padding="10dp"/>
+            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
+            app:hintTextAppearance="@style/AppTheme.Text.HintText">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/otp"
+                android:padding="10dp"/>
+
+
+        </android.support.design.widget.TextInputLayout>
+
+
+
 
         <Button
             android:layout_width="wrap_content"
